Add field filters for tree

--- a/solr/webapp/web/css/angular/schema-designer.css
+++ b/solr/webapp/web/css/angular/schema-designer.css
@@ -1374,3 +1374,7 @@ limitations under the License.
   text-decoration-line: underline;
   text-decoration-color: #003eff;
 }
+
+#content #designer #tree-filters-type {
+  width: 90px;
+}
