--- a/solr/webapp/web/partials/schema-designer.html
+++ b/solr/webapp/web/partials/schema-designer.html
@@ -328,7 +328,7 @@ limitations under the License.
         <h2><span>Schema Editor</span></h2>
         <div id="tree-content" class="content clearfix" ng-show="showSchemaActions">
           <div id="tree-filters">
-            Filter by:&nbsp;<select id="tree-filters-cat"
+            Filter fields by:&nbsp;<select id="tree-filters-cat"
                 ng-model="treeFilter"
                 ng-change="applyTreeFilterOption()">
               <option value=""></option>
