Add line through for old values

--- a/solr/webapp/web/css/angular/schema-designer.css
+++ b/solr/webapp/web/css/angular/schema-designer.css
@@ -1078,6 +1078,7 @@ limitations under the License.
 
 #content #designer p.old-value {
   color: indianred;
+  text-decoration: line-through;
 }
 
 #content #designer p.new-value {
